General improvements and fixed som unreadable elements
* tags
* bg color
* hover colors
* quotes
* visited links

--- a/pocket-web-dark.css
+++ b/pocket-web-dark.css
@@ -1,100 +1,118 @@
 @-moz-document url-prefix("https://getpocket.com") {
-.pkt-nav, body, #content .wrapper.active, .side-nav, .page_queue_grid .item_content, .sub, .page_queue_list .item_content, .edit-content, .tag-detail {
-  background-color: #212121 !important;
-  /* general bg */
+.pkt-nav,
+body,
+#content .wrapper.active,
+.side-nav,
+.page_queue_grid .item_content,
+.sub,
+.page_queue_list .item_content,
+.edit-content,
+.tag-detail {
+	background-color: #424242 !important;
+	/* general bg */
 }
-.page_queue_grid, .item_content, .edit-content, .item-detail, .item-domain, .tag-detail
+.page_queue_grid,
+.item_content,
+.edit-content,
+.item-detail,
+.item-domain,
+.tag-detail
 /* articles */
 
 {
-  border: 1px solid #313633 !important;
-  border-bottom: 1px solid #313633 !important;
+	border: 2px solid #212121 !important;
+	border-bottom: 1px solid #212121 !important;
 }
-h1 {
-  color: #f0dfaf !important;
+
+/*Headline in articles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+h7 {
+	color: #BDBDBD !important;
 }
-h1, h2, h3, h4, h5, h6, h7 {
-  color: #E0E0E0 !important;
+/* article text color*/
+p {
+	color: #BDBDBD !important;
 }
-p{
-  color: #eeeeee !important;
+
+/* quotes */ 
+.reader_content,
+.excerpt {
+	color: #9E9E9E !important;
 }
-.reader_content, .excerpt {
-  color: #dcdccc !important;
-}
-a.queue_togglesection_option {
-  color: #607D8B !important;
-  /*header text*/
-}
-a.queue_togglesection_optionselected {
-  color: #ECEFF1 !important;
-  /* selectedheader text*/
-}
+
 a.title {
-  color: #42a5f5 !important;
-  /* articletitle */
-}
-a.section-archive, a.section-favorites, a.section-mylist, a.nav-sublist, a.filter-tags {
-  color: #607D8B !important;
-  /* selectionbar */
-}
-a.nav-sublist:hover span {
-  color: #ECEFF1 !important;
-}
-a.filter-tags:hover {
-  color: #ECEFF1 !important;
-}
-a.filter-tags:hover span {
-  color: #ECEFF1 !important;
-}
-li.nav-default-divider {
-  border-bottom: 1px solid #757575;
-  /* selectionbar hr */
-}
-a.topic_detail, a.topic_detail:visited {
-  color: #dcdccc !important;
+	color: #BDBDBD !important;
+	/* articletitle */
 }
 a:visited {
-  color: #90A4AE !important; /* visited / readed links */
+	color: #757575 !important;
+	/* visited / read links */
 }
+
+a.section-archive,
+a.section-favorites,
+a.section-mylist,
+a.nav-sublist,
+a.filter-tags {
+	color: #BDBDBD !important;
+	/* selectionbar */
+}
+a.nav-sublist:hover span {
+	color: #E0E0E0 !important;
+}
+a.filter-tags:hover {
+	color: #E0E0E0 !important;
+}
+a.filter-tags:hover span {
+	color: #E0E0E0 !important;
+}
+
+
 div.popover-new {
-  background-color: #212121 !important;
-  /* popups eg tags */
+	background-color: #212121 !important;
+	/* popups eg tags */
 }
 .popover-new .popover-new-list a {
-  color: #607D8B !important;
-  /* popout text */
+	color: #607D8B !important;
+	/* popout text */
 }
 .popover-new .popover-new-list a:hover {
-  color: #ECEFF1 !important;
-  background-color: #90A4AE !important;
+	color: #ECEFF1 !important;
+	background-color: #90A4AE !important;
 }
 div.reading_progress_bar {
-  background-color: #EAEAEA !important;
+	background-color: #EAEAEA !important;
 }
 span.nav-username {
-  color: #607D8B !important;
+	color: #BDBDBD !important;
 }
 .item:hover .buttons {
-  background-color: #616161 !important;
+	background-color: #424242 !important;
 }
 .overlay_screen .overlay_detail {
-  background: #616161;
+	background: #616161;
 }
 .token-input-list li input {
-  background: #616161;
+	background: #616161;
 }
-a.topic_detail
-{
-  background-color: #757575;
-  color: #212121 !important;
+a.topic_detail {
+	background-color: #757575;
+	color: #212121 !important;
 }
-.item_content_actions, .item_content_text
-{
-  background-color: #212121 !important;
+.item_content_actions,
+.item_content_text {
+	background-color: #212121 !important;
 }
-.item_content_actionscontainer
-{
-    border-top: 1px solid #757575;
+.item_content_actionscontainer {
+	border-top: 1px solid #757575;
+}
+/* tag hover */
+.page-queuedark .queue_list .tags .tag:hover{
+	color: #212121;
 }
 }
